홈페이지 메뉴 about 추가 reference 복구

--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
                             </nav>
                         </div>
                     </div>
-                </div>html
+                </div>
                 <div class='header_bg'></div>
             </header>
             <div id='main' class='all_colors' data-scroll-offset='88'>
