testpage, smartbox 페이지 수정

--- a/ex_index.html
+++ b/ex_index.html
@@ -106,7 +106,7 @@
                                             <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
-                                            <a href="/ex_cooling.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Smartbox</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                                            <a href="/cooling.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Smartbox</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-396" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-4">
                                             <a href="/question.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Support</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
@@ -248,7 +248,7 @@
                         <div class="flex_column av_one_full  av-animated-generic fade-in  flex_column_div av-zero-column-padding first  avia-builder-el-28  el_before_av_one_full  avia-builder-el-first  " style='border-radius:0px; '>
                             <div style='padding-bottom:0px; color:#ffffff; font-size:40px;' class='av-special-heading av-special-heading-h3 custom-color-heading blockquote modern-quote  avia-builder-el-29  el_before_av_hr  avia-builder-el-first  av-inherit-size'>
                                 <h3 class='av-special-heading-tag'  itemprop="headline"  >
-                                    <a href="/ex_cooling.html" style="text-decoration: none;">
+                                    <a href="/cooling.html" style="text-decoration: none;">
                                         <STRONG>서버 침지냉각 SmartBox →</STRONG>
                                     </a>
                                 </h3>
@@ -296,8 +296,8 @@
                                         </p>
                                         <p>
                                             ● 제품군<br/>
-                                            &nbsp;&nbsp; <a href="/ex_cooling.html#fordc">- SmartBox for datacenter (바로가기)</a><br/>
-                                            &nbsp;&nbsp; <a href="/ex_cooling.html#foredge">- SmartBox for Edge (바로가기)</a>
+                                            &nbsp;&nbsp; <a href="/cooling.html#fordc">- SmartBox for datacenter (바로가기)</a><br/>
+                                            &nbsp;&nbsp; <a href="/cooling.html#foredge">- SmartBox for Edge (바로가기)</a>
                                         </p>
                                     </div>
                                 </section>
