--- a/ex_index.html
+++ b/ex_index.html
@@ -344,31 +344,29 @@
                                             <h3 class='iconbox_content_title'  itemprop="headline"   style='color:#ffffff; '>SmartBox가 필요한 고객</h3>
                                         </header>
                                         <div class='iconbox_content_container av_inherit_color'  itemprop="text"   style='color:#ffffff; '>
-                                            <section class="av_textblock_section"  itemscope="itemscope" itemtype="https://schema.org/CreativeWork" >
-                                                <div class='avia_textblock  av_inherit_color' style='color:#ffffff;' itemprop="text" >
+                                            <section class="av_textblock_section mp_content"  itemscope="itemscope" itemtype="https://schema.org/CreativeWork" >
+                                                <div class='avia_textblock  av_inherit_color mp_flexbox' style='color:#ffffff;' itemprop="text" >
                                                     <table class="flex_column av_one_full  av-animated-generic right-to-left  flex_column_div av-zero-column-padding first  avia-builder-el-32  el_after_av_one_full  avia-builder-el-last">
                                                         <tr style="background-color: #7544aa; color: #ffffff; border: 0px;" >
-                                                            <td width="40%"  style="border: 0px;">
-                                                                <div style="border: 2px solid #ffffff; padding: 5px 5% 20px 5%;background-color: #38214e; font-size: 16px; max-height: 70px;">
+                                                            <div class="mp_item">
+                                                                <div style="border: 2px solid #ffffff; padding: 5px 5% 0px 5%; background-color: #38214e; font-size: 16px; max-height: 70px;">
                                                                     <img src="/image/img_sapling.png">
                                                                 </div>
-                                                            </td>
-                                                            <td width="7%" style="border: 0px;"></td>
-                                                            <td width="40%" style="border: 0px;">
-                                                                <div style="border: 2px solid #ffffff; padding: 5px 5% 20px 5%;background-color: #38214e; font-size: 16px; max-height: 70px;">
+                                                            </div>
+                                                            <div class="mp_item">
+                                                                <div style="border: 2px solid #ffffff; padding: 5px 5% 0px 5%; background-color: #38214e; font-size: 16px; max-height: 70px;">
                                                                     <img src="/image/img_low.png">
                                                                 </div>
-                                                            </td>
+                                                            </div>
                                                         </tr>
                                                         <tr style="background-color: #7544aa; color: #ffffff; border: 0px;">
-                                                            <td width="40%"  style="border: 0px;">
-                                                                <div style="border: 2px solid #ffffff; padding: 5px 5% 20px 5%;background-color: #38214e; font-size: 16px; max-height: 70px;">
+                                                            <div class="mp_item">
+                                                                <div style="border: 2px solid #ffffff; padding: 5px 5% 0px 5%; background-color: #38214e; font-size: 16px; max-height: 70px;">
                                                                     <img src="/image/img_plans.png">
                                                                 </div>
-                                                            </td>
-                                                            <td width="7%" style="border: 0px;"></td>
-                                                            <td width="40%" style="border: 0px;">
-                                                            </td>
+                                                            </div>
+                                                            <div class="mp_item">
+                                                            </div>
                                                         </tr>
                                                     </table>
                                                 </div>
