--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,9 @@
                         <a href="/about.html">회사소개</a><br />
                         <a href="/data/About_Databean_202106.pdf">회사소개서 다운  </a>
                         <img src="https://cdn3.iconfinder.com/data/icons/document-icons-2/30/647710-pdf-16.png"><br />
-                        <a href="/#partner">파트너</a></p>
+                        <a href="/#partner">파트너</a><br/>
+                        <a href="/about.html#career">채용문의</a>
+                    </p>
                 </div>
                 <span class="seperator extralight-border"></span>
             </section>
@@ -27,13 +29,12 @@
         </div>
         <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth '>
             <section id="text-7" class="widget clearfix widget_text">
-                <h3 class="widgettitle">Question</h3>
+                <h3 class="widgettitle">Support</h3>
                 <div class="textwidget">
                     <p>
                         <a href="/question.html#checkpoint">사전 준비 사항</a><br />
                         <a href="/question.html#faq">자주하는 질문</a><br />
                         <a href="/question.html#ask">견적문의</a><br />
-                        <a href="/about.html#career">채용문의</a>
                     </p>
                 </div>
                 <span class="seperator extralight-border"></span>
