main page update test

--- a/cooling.html
+++ b/cooling.html
@@ -195,12 +195,12 @@
                                         </header>
                                         <div class='iconbox_content_container '  itemprop="text"  >
                                             <p style="font-size: 13px; color: grey;">
-                                                - 침지냉각 시스템의 장점 구현<br/>
-                                                - 19인치, 21인치 랙 호환 및 거의 모든 IT 서버와 호환 가능<br/>
-                                                - 통합/분리형 라디에이터 냉각기 옵션<br/>
-                                                - 실시간 사용량 모니터링 및 네트워크 관리<br/>
-                                                - 표준 프로토콜을 통한 장애 발생 알림<br/>
-                                                - DCIM(Data center Infra Management) 연동<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 침지냉각 시스템의 장점 구현<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 19인치, 21인치 랙 호환 및 거의 모든 IT 서버와 호환 가능<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 통합/분리형 라디에이터 냉각기 옵션<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 실시간 사용량 모니터링 및 네트워크 관리<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 표준 프로토콜을 통한 장애 발생 알림<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; DCIM(Data center Infra Management) 연동<br/>
                                             </p>
                                         </div>
                                     </div>
@@ -254,11 +254,11 @@
                                         </header>
                                         <div class='iconbox_content_container '  itemprop="text"  >
                                             <p style="font-size: 13px; color: grey;">
-                                                - 지연시간 없이 신속한 데이터 처리가 필요한 고객층
-                                                - 짧은 기간 안에 데이터 센터에 버금가는 시스템 구축이 필요한 고객
-                                                - 만약의 사고에도 대응할 수 있는 완벽한 시스템 구축이 필요한 고객
-                                                - 시스템 구축에서 유지보수까지 획기적 비용 절감이 필요한 고객
-                                                - 기업 성자에 따라 탄력적이고 신속한 인프라 확장이 필요한 고객
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 지연시간 없이 신속한 데이터 처리가 필요한 고객층<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 짧은 기간 안에 데이터 센터에 버금가는 시스템 구축이 필요한 고객<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 만약의 사고에도 대응할 수 있는 완벽한 시스템 구축이 필요한 고객<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 시스템 구축에서 유지보수까지 획기적 비용 절감이 필요한 고객<br/>
+                                                &nbsp;&nbsp;&nbsp; ●&nbsp; 기업 성자에 따라 탄력적이고 신속한 인프라 확장이 필요한 고객<br/>
                                             </p>
                                         </div>
                                     </div>
@@ -404,7 +404,8 @@
                                                 </article>
                                                 <div class='iconlist-timeline'></div>
                                                 </li> -->
-                                                <!-- 5번 항목 -->
+                                                
+                                                <!-- 5번 항목(장비 소개서) -->
                                                 <li>
                                                     <hr>
                                                     <article class="article-icon-entry "  itemscope="itemscope" itemtype="https://schema.org/CreativeWork" >
