--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
-<div class='container_wrap footer_color' id='footer'>
-    <div class='container'>
-        <div class='flex_column av_one_fifth  first el_before_av_one_fifth'>
+<div class='container_wrap footer_color mp_content' id='footer'>
+    <div class='container mp_flexbox'>
+        <div class='flex_column av_one_fifth  first el_before_av_one_fifth' style="min-width: 150px;">
             <section id="text-3" class="widget clearfix widget_text">
                 <h3 class="widgettitle">Company Information</h3>
                 <div class="textwidget">
@@ -15,7 +15,7 @@
                 <span class="seperator extralight-border"></span>
             </section>
         </div>
-        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth '>
+        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth mp_footer'>
             <section id="text-6" class="widget clearfix widget_text">
                 <h3 class="widgettitle">Product</h3>
                 <div class="textwidget">
@@ -27,7 +27,7 @@
                 <span class="seperator extralight-border"></span>
             </section>
         </div>
-        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth '>
+        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth mp_footer'>
             <section id="text-7" class="widget clearfix widget_text">
                 <h3 class="widgettitle">Support</h3>
                 <div class="textwidget">
@@ -40,7 +40,7 @@
                 <span class="seperator extralight-border"></span>
             </section>
         </div>
-        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth '>
+        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth mp_footer'>
             <section id="text-8" class="widget clearfix widget_text">
                 <h3 class="widgettitle">Free Trial</h3>
                 <div class="textwidget">
@@ -54,7 +54,7 @@
                 <span class="seperator extralight-border"></span>
             </section>
         </div>
-        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth '>
+        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth mp_footer'>
             <section id="text-4" class="widget clearfix widget_text">
                 <h3 class="widgettitle">Contact</h3>
                 <div class="textwidget">
