--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
                 <div class="textwidget">
                     <p>
                         <a href="/about.html">회사 소개</a><br />
-                        <a href="/data/About_Databean_202106.pdf">회사소개서 다운  </a>
+                        <a href="/data/(주)데이터빈_회사소개(2021.09).pdf">회사소개서 다운  </a>
                         <img src="https://cdn3.iconfinder.com/data/icons/document-icons-2/30/647710-pdf-16.png"><br />
                         <a href="/#partner">파트너</a><br/>
                         <a href="/about.html#career">채용문의</a>
@@ -62,7 +62,10 @@
                         주식회사 데이터빈<br />
                         경기 수원시 영통구 창룡대로 256번길 77, 1518호
                     </p>
-                    <p style="font-size: 10pt;">sooyong.kim@databean.co.kr</p>
+                    <p style="font-size: 10pt;">
+                        sooyong.kim<br/>
+                        &nbsp;@databean.co.kr
+                    </p>
                 </div>
                 <span class="seperator extralight-border"></span>
             </section>
