--- a/cooling.html
+++ b/cooling.html
@@ -152,7 +152,7 @@
                 <div id='fordc' class='av-layout-grid-container entry-content-wrapper main_color av-fixed-cells  avia-builder-el-16  el_after_av_section  el_before_av_layout_row  submenu-not-first container_wrap fullsize'>
                     <div class="flex_cell no_margin av_two_fifth  avia-builder-el-17  el_before_av_cell_three_fifth  avia-builder-el-first   avia-full-contain av-hide-on-mobile  " style='background-position:center; background-repeat:no-repeat; vertical-align:middle; padding:30px 30px 30px 30px; background-color:#ffffff;'>
                         <div class='flex_cell_inner' >
-                            <img src="/image/tank.png" style="padding-left: 15%; max-height: 580px;">
+                            <img src="/image/tank_dc.png" style="padding-left: 13%; max-height: 500px;">
                         </div>
                     </div>
                     <div class="flex_cell no_margin av_three_fifth  avia-builder-el-18  el_after_av_cell_two_fifth  avia-builder-el-last   " style='vertical-align:middle; padding:130px 130px 130px 30px ; background-color:#ffffff; '>
@@ -213,7 +213,7 @@
                 <div id='foredge' class='av-layout-grid-container entry-content-wrapper main_color av-fixed-cells  avia-builder-el-16  el_after_av_section  el_before_av_layout_row  submenu-not-first container_wrap fullsize'   >
                     <div class="flex_cell no_margin av_two_fifth  avia-builder-el-17  el_before_av_cell_three_fifth  avia-builder-el-first   avia-full-contain av-hide-on-mobile  " style='background-position:center; background-repeat:no-repeat; vertical-align:middle; padding:30px 30px 30px 30px; background-color:#f4f4f4;'>
                         <div class='flex_cell_inner' >
-                            <img src="/image/smartbox_for_edge.jpg" style="padding-left: 17%; max-height: 500px;">
+                            <img src="/image/tank_1.png" style="padding-left: 17%; max-height: 580px;">
                         </div>
                     </div>
                     <div class="flex_cell no_margin av_three_fifth  avia-builder-el-18  el_after_av_cell_two_fifth  avia-builder-el-last   " style='vertical-align:middle; padding:130px 130px 130px 30px ; background-color:#f4f4f4; '>
