--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         <!-- mobile setting -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- Scripts/CSS and wp_head hook -->
-        <title>DATABEAN &#8211; 중소기업용 커스터마이징 솔루션 개발 </title>
+        <title>DATABEAN &#8211; 'SmartBox' 데이터센터 서버 냉각기술의 혁신, 침지냉각 선도기업 &#124; 데이터빈</title>
+        <meta name="description" content="데이터빈은 국내 최초 침지냉각시스템(immersion cooling system) 'SmartBox'로 데이터센터 및 기업의 전산실 냉각 기술을 혁신합니다.">
+        <meta property="og:title" content="DATABEAN &#8211; 'SmartBox' 데이터센터 서버 냉각기술의 혁신, 침지냉각 선도기업 &#124; 데이터빈">
+        <meta property="og:description" content="데이터빈은 국내 최초 침지냉각시스템(immersion cooling system) 'SmartBox'로 데이터센터 및 기업의 전산실 냉각 기술을 혁신합니다.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="http://www.databean.co.kr">
         <link rel='dns-prefetch' href='//s.w.org' />
         <!-- google webfont font replacement -->
         <link rel='stylesheet' id='avia-google-webfont' href='//fonts.googleapis.com/css?family=Quicksand%7COpen+Sans:400,600' type='text/css' media='all'/>
@@ -410,7 +415,7 @@
                                     <div class='avia_textblock '   itemprop="text" >
                                         <p>
                                             <span style="color:grey;">
-                                                <em>표준운영정책을 통한 제조사별, 제품별 다양한 네트워크 장비의 통함 관리 기능을 제공하고, ITIL 표준의 ITSM 기법을 사용하여 자원의 성능과 장애를 감시 및 조치하고 상호연관성을 분석하여 정확한 진단 및 높은 수준의 서비스를 제공함으로써 네트워크 망의 안정성을 보장합니다.</em>
+                                                <em>표준운영정책을 통한 제조사별, 제품별 다양한 네트워크 장비의 통합 관리 기능을 제공하고, ITIL 표준의 ITSM 기법을 사용하여 자원의 성능과 장애를 감시 및 조치하고 상호연관성을 분석하여 정확한 진단 및 높은 수준의 서비스를 제공함으로써 네트워크 망의 안정성을 보장합니다.</em>
                                             </span>
                                         </p>
                                     </div>
