mainpage, smartbox 소개 페이지  장비 이미지 변경 (그래픽 -> 사진)

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </div>
             </div>
             <div id='smartbox' class='av-layout-grid-container entry-content-wrapper main_color av-flex-cells  avia-builder-el-25  el_after_av_layout_row  el_before_av_layout_row  submenu-not-first container_wrap fullsize'   >
-                <div class="flex_cell no_margin av_two_fifth  avia-builder-el-26  el_before_av_cell_three_fifth  avia-builder-el-first   avia-full-contain av-hide-on-mobile  " style='background-image:url(/image/tank.png); background-position:center left; background-repeat:no-repeat; vertical-align:top; padding:800px 30px 30px 30px ; background-color:#7544aa;'>
+                <div class="flex_cell no_margin av_two_fifth  avia-builder-el-26  el_before_av_cell_three_fifth  avia-builder-el-first   avia-full-contain av-hide-on-mobile  " style='background-image:url(/image/smartbox_main.png); background-position:center left; background-repeat:no-repeat; vertical-align:top; padding:800px 30px 30px 30px ; background-color:#7544aa;'>
                     <div class='flex_cell_inner' ></div>
                 </div>
                 <div class="flex_cell no_margin av_three_fifth  avia-builder-el-27  el_after_av_cell_two_fifth  avia-builder-el-last   " style='vertical-align:middle; padding:130px 130px 130px 30px ; background-color:#7544aa; '>
