footer 회사 문의 이메일 수정

--- a/footer.html
+++ b/footer.html
@@ -62,9 +62,8 @@
                         주식회사 데이터빈<br />
                         경기 수원시 영통구 창룡대로 256번길 77, 1518호
                     </p>
-                    <p style="font-size: 10pt;">
-                        sooyong.kim<br/>
-                        &nbsp;@databean.co.kr
+                    <p style="font-size: 10pt; letter-spacing: -0.3px;">
+                        contact@databean.co.kr
                     </p>
                 </div>
                 <span class="seperator extralight-border"></span>
