--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </div>
             </div>
             <div id='smartbox' class='av-layout-grid-container entry-content-wrapper main_color av-flex-cells  avia-builder-el-25  el_after_av_layout_row  el_before_av_layout_row  submenu-not-first container_wrap fullsize'   >
-                <div class="flex_cell no_margin av_two_fifth  avia-builder-el-26  el_before_av_cell_three_fifth  avia-builder-el-first   avia-full-contain av-hide-on-mobile  " style='background-image:url(/image/smartbox_main.png); background-position:center left; background-repeat:no-repeat; vertical-align:top; padding:800px 30px 30px 30px ; background-color:#7544aa;'>
+                <div class="flex_cell no_margin av_two_fifth  avia-builder-el-26  el_before_av_cell_three_fifth  avia-builder-el-first   avia-full-contain av-hide-on-mobile  " style='background-image:url(/image/smartbox_title.png); background-position:center left; background-repeat:no-repeat; vertical-align:top; padding:800px 30px 30px 30px ; background-color:#7544aa;'>
                     <div class='flex_cell_inner' ></div>
                 </div>
                 <div class="flex_cell no_margin av_three_fifth  avia-builder-el-27  el_after_av_cell_two_fifth  avia-builder-el-last   " style='vertical-align:middle; padding:130px 130px 130px 30px ; background-color:#7544aa; '>
@@ -476,18 +476,18 @@
                         </div>
                     </div>
                 </div>
-                <!-- 파트너 소개 -->
-                <div id='partner' class='avia-section main_color avia-section-large avia-no-border-styling avia-bg-style-scroll  avia-builder-el-53  el_after_av_layout_row  avia-builder-el-last  container_wrap fullsize'   >
+                <!-- 기사 메뉴 -->
+                <div id='announce' class='avia-section main_color avia-section-large avia-no-border-styling avia-bg-style-scroll  avia-builder-el-53  el_after_av_layout_row  avia-builder-el-last  container_wrap fullsize'   >
                     <div class='container' >
                         <div class='template-page content  av-content-full alpha units'>
                             <div class='post-entry post-entry-type-page post-entry-340'>
                                 <div class='entry-content-wrapper clearfix'>
-                                    <div style='height:50px' class='hr hr-invisible  avia-builder-el-54  el_before_av_one_full  avia-builder-el-first '>
+                                    <div style='height:30px' class='hr hr-invisible  avia-builder-el-54  el_before_av_one_full  avia-builder-el-first '>
                                         <span class='hr-inner ' ><span class='hr-inner-style'></span></span>
                                     </div>
                                     <div class="flex_column av_one_full  flex_column_div av-zero-column-padding first  avia-builder-el-55  el_after_av_hr  avia-builder-el-last  " style='border-radius:0px; '>
-                                        <div style='padding-bottom:0px;font-size:40px;' class='av-special-heading av-special-heading-h3  blockquote modern-quote modern-centered  avia-builder-el-56  el_before_av_hr  avia-builder-el-first   av-thin-font av-inherit-size'>
-                                            <h3 class='av-special-heading-tag'  itemprop="headline"  ><strong> 데이터빈과 새로운 가치를 만들어가는 고객사</strong> </br></br></h3>
+                                        <div style='padding-bottom:0px;font-size:30px;' class='av-special-heading av-special-heading-h3  blockquote modern-quote modern-centered  avia-builder-el-56  el_before_av_hr avia-builder-el-first   av-thin-font av-inherit-size'>
+                                            <h3 class='av-special-heading-tag'  itemprop="headline"  ><strong> announce by databean </strong> </br></h3>
                                             <div class='special-heading-border'>
                                                 <div class='special-heading-inner-border' ></div>
                                             </div>
@@ -497,9 +497,60 @@
                                         </div>
                                         <div class='iconbox_content_container av_inherit_color'  itemprop="text"   style='color:#ffffff; '>
                                             <section class="av_textblock_section mp_content"  itemscope="itemscope" itemtype="https://schema.org/CreativeWork" >
-                                                <div class='avia_textblock  av_inherit_color mp_flexbox' style='color:#ffffff;' itemprop="text" >
+                                                <div class='avia_textblock  av_inherit_color mp_flexbox' style='color:black;' itemprop="text" >
+                                                    <div style="width: 48%; float: left;">
+                                                        <a href="https://www.amenews.kr/news/view.php?idx=47554" style="text-decoration-line: none;">
+                                                            <div>
+                                                                <img src="./image/article_smartbox.jpg" width="340px" style="margin:0px auto; text-align: center; display: block; border: 5px solid lightgrey;">
+                                                            </div>
+                                                            <div><br>
+                                                                <h4>데이터빈, 서버 냉각용 침지냉각 스마트박스 국내 첫 제작 보급</h4>
+                                                                <h6 style="text-align: center;">(신소재 경제 신문)</h6>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+                                                    <div style="width: 9%; float:left;">
+
+                                                    </div>
+                                                    <div style="width: 39%; float: right;">
+                                                        <div><br>
+                                                            <iframe width="620" height="320" src="https://www.youtube.com/embed/6clN2hDac9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                        </div>
+                                                        <div><br>
+                                                            <h4>'Immersion Cooling' HP Blade Servers in SmartBox(KIER)</h4>
+                                                        </div>
+                                                        
+                                                    </div>
+                                                </div>
+                                            </section>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 파트너 소개 -->
+                <div id='partner' class='avia-section main_color avia-section-large avia-no-border-styling avia-bg-style-scroll  avia-builder-el-53  el_after_av_layout_row  avia-builder-el-last  container_wrap fullsize ' style="background-color: #f4f4f4;">
+                    <div class='container' >
+                        <div class='template-page content  av-content-full alpha units'>
+                            <div class='post-entry post-entry-type-page post-entry-340'>
+                                <div class='entry-content-wrapper clearfix'>
+                                    <div style='height:50px' class='hr hr-invisible  avia-builder-el-54  el_before_av_one_full  avia-builder-el-first '>
+                                        <span class='hr-inner ' ><span class='hr-inner-style'></span></span>
+                                    </div>
+                                    <div class="flex_column av_one_full  flex_column_div av-zero-column-padding first  avia-builder-el-55  el_after_av_hr  avia-builder-el-last  " style='border-radius:0px; '>
+                                        <div style='padding-bottom:0px;font-size:30px;' class='av-special-heading av-special-heading-h3  blockquote modern-quote modern-centered  avia-builder-el-56  el_before_av_hr  avia-builder-el-first   av-thin-font av-inherit-size'>
+                                            <h3 class='av-special-heading-tag'  itemprop="headline"  ><strong> with us </strong> </br></br></h3>
+                                            <div class='special-heading-border'>
+                                                <div class='special-heading-inner-border' ></div>
+                                            </div>
+                                        </div><br>
+                                        <div class='iconbox_content_container av_inherit_color'  itemprop="text"   style='color:grey; '>
+                                            <section class="av_textblock_section mp_content"  itemscope="itemscope" itemtype="https://schema.org/CreativeWork" >
+                                                <div class='avia_textblock  av_inherit_color mp_flexbox' style='color:grey;' itemprop="text" >
                                                     <div class="mp_logo">
-                                                        <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/lsglobal.jpg" alt="" />
+                                                        <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/logo_lsg.png" alt="" />
                                                     </div>
                                                     <div class="mp_logo">
                                                         <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/cogymlogo03.png" alt="" />
@@ -520,13 +571,13 @@
                                                         <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/komerilogo1.png" alt="" />
                                                     </div>
                                                     <div class="mp_logo">
-                                                        <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/ktl.png" alt="" />
+                                                        <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/logo_ktl.png" alt="" />
                                                     </div>
                                                     <div class="mp_logo">
                                                         <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/kicet.png" alt="" />
                                                     </div>
                                                     <div class="mp_logo">
-                                                        <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/kier.jpg" alt="" />
+                                                        <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/logo_kier.png" alt="" />
                                                     </div>
                                                 </div>
                                             </section>
