support, company 메일 발송 action 주소 변경

--- a/question.html
+++ b/question.html
@@ -93,37 +93,7 @@
     </head>
     <body id="top" class="home page-template-default page page-id-340 stretched quicksand open_sans " itemscope="itemscope" itemtype="https://schema.org/WebPage" >
         <div id='wrap_all'>
-            <header id='header' class='all_colors header_color light_bg_color  av_header_top av_logo_left av_main_nav_header av_menu_right av_slim av_header_sticky av_header_shrinking av_header_stretch_disabled av_mobile_menu_phone av_header_searchicon_disabled av_header_unstick_top_disabled av_minimal_header av_minimal_header_shadow av_bottom_nav_disabled  av_alternate_logo_active av_header_border_disabled'  role="banner" itemscope="itemscope" itemtype="https://schema.org/WPHeader" >
-                <a id="advanced_menu_toggle" href="#" aria-hidden='true' data-av_icon='' data-av_iconfont='entypo-fontello'></a>
-                <a id="advanced_menu_hide" href="#" 	aria-hidden='true' data-av_icon='' data-av_iconfont='entypo-fontello'></a>
-                <div  id='header_main' class='container_wrap container_wrap_logo'>
-                    <div class='container av-logo-container'>
-                        <div class='inner-container'>
-                            <strong class='logo'><a href='/'><img height='100' width='300' src='/image/logomain.png' alt='DATABEAN' /><span class='subtext'><img src='/image/logowhite2.png' class='alternate' alt='' title='' /></span></a></strong>
-                            <nav class='main_menu' data-selectname='Select a page'  role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement" >
-                                <div class="avia-menu av-main-nav-wrap av_menu_icon_beside">
-                                    <ul id="avia-menu" class="menu av-main-nav">
-                                        <li id="menu-item-333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
-                                            <a href="/cooling.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">SmartBox</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-3">
-                                            <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Datamon</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-396" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-4">
-                                            <a href="/question.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Support</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-4">
-                                            <a href="/about.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Company</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <ul class='noLightbox social_bookmarks icon_count_1'></ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-                <div class='header_bg'></div>
-            </header>
+            <header include-html="/header.html"></header>
             <div id='main' class='all_colors' data-scroll-offset='88'>
                 <div id='av_section_1' class='avia-section main_color avia-section-huge avia-no-border-styling avia-full-stretch av-section-color-overlay-active avia-bg-style-fixed  avia-builder-el-0  el_before_av_section  avia-builder-el-first  container_wrap fullsize' style = 'background-repeat: no-repeat; background-image: url(/image/question.jpg); background-attachment: fixed; background-position: top left; ' data-section-bg-repeat='stretch' >
                     <div class='av-section-color-overlay-wrap'>
@@ -443,7 +413,8 @@
                                     </div>
                                     <div class="flex_column av_one_fifth  flex_column_div av-zero-column-padding first  avia-builder-el-32  el_after_av_hr  el_before_av_three_fifth  " style='border-radius:0px; '></div>
                                     <div class="flex_column av_three_fifth  flex_column_div av-zero-column-padding   avia-builder-el-33  el_after_av_one_fifth  el_before_av_one_fifth  " style='border-radius:0px; '>
-                                        <form action="https://script.google.com/a/databean.co.kr/macros/s/AKfycbxKoyPvHMO77RRh_tpb2qzKCZFmIjfbrBDcgqK7Yg/exec" method="post"  class="avia_ajax_form av-form-labels-visible   avia-builder-el-34  avia-builder-el-no-sibling  " data-avia-form-id="1" data-avia-redirect=''>
+                                        <!-- <form action="https://script.google.com/a/databean.co.kr/macros/s/AKfycbxKoyPvHMO77RRh_tpb2qzKCZFmIjfbrBDcgqK7Yg/exec" method="post"  class="avia_ajax_form av-form-labels-visible   avia-builder-el-34  avia-builder-el-no-sibling  " data-avia-form-id="1" data-avia-redirect=''> -->
+                                        <form action="https://script.google.com/macros/s/AKfycbzWh1fbSqGkxPSm7pa_X9JvtGBvoUEDL_lvZvm1UegQW65A8-I/exec" method="post"  class="av-form-labels-visible avia-builder-el-40 avia-builder-el-no-sibling gform" data-avia-form-id="1" data-avia-redirect=''>
                                             <fieldset>
                                                 <p class=' first_form  form_element form_element_half' id='element_avia_1_1'>
                                                     <label for="avia_1_1">성함 <abbr class="required" title="required">*</abbr></label>
