--- a/header.html
+++ b/header.html
@@ -1,34 +1,31 @@
-            <header id='header' class='all_colors header_color light_bg_color  av_header_top av_logo_left av_main_nav_header av_menu_right av_slim av_header_sticky av_header_shrinking av_header_stretch_disabled av_mobile_menu_phone av_header_transparency av_header_searchicon_disabled av_header_unstick_top_disabled av_minimal_header av_minimal_header_shadow av_bottom_nav_disabled  av_alternate_logo_active av_header_border_disabled'  role="banner" itemscope="itemscope" itemtype="https://schema.org/WPHeader" >
-                <a id="advanced_menu_toggle" href="#" aria-hidden='true' data-av_icon='' data-av_iconfont='entypo-fontello'></a>
-                <a id="advanced_menu_hide" href="#" aria-hidden='true' data-av_icon='' data-av_iconfont='entypo-fontello'></a>
-                <div  id='header_main' class='container_wrap container_wrap_logo'>
-                    <div class='container av-logo-container'>
-                        <div class='inner-container'>
-                            <strong class='logo'><a href='/'><img height='100' width='300' src='/image/logomain.png' alt='DATABEAN' /><span class='subtext'><img src='/image/logowhite2.png' class='alternate' alt='' title='' /></span></a></strong>
-                            <nav class='main_menu' data-selectname='Select a page'  role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement" >
-                                <div class="avia-menu av-main-nav-wrap av_menu_icon_beside">
-                                    <ul id="avia-menu" class="menu av-main-nav">
-                                        <li id="menu-item-300" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-top-level menu-item-top-level-1">
-                                            <a href="/" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Reference</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
-                                            <a href="/cooling.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Smartbox</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-3">
-                                            <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-4">
-                                            <a href="/about.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">About</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-235" class="menu-item menu-item-type-custom menu-item-object-custom av-menu-button av-menu-button-bordered menu-item-top-level menu-item-top-level-5">
-                                            <a href="/solution.html#download" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Free Trial</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <ul class='noLightbox social_bookmarks icon_count_1'></ul>
-                            </nav>
-                        </div>
+<header id='header' class='all_colors header_color light_bg_color  av_header_top av_logo_left av_main_nav_header av_menu_right av_slim av_header_sticky av_header_shrinking av_header_stretch_disabled av_mobile_menu_phone av_header_searchicon_disabled av_header_unstick_top_disabled av_minimal_header av_minimal_header_shadow av_bottom_nav_disabled  av_alternate_logo_active av_header_border_disabled'  role="banner" itemscope="itemscope" itemtype="https://schema.org/WPHeader" >
+    <a id="advanced_menu_toggle" href="#" aria-hidden='true' data-av_icon='' data-av_iconfont='entypo-fontello'></a>
+    <a id="advanced_menu_hide" href="#" 	aria-hidden='true' data-av_icon='' data-av_iconfont='entypo-fontello'></a>
+    <div  id='header_main' class='container_wrap container_wrap_logo'>
+        <div class='container av-logo-container'>
+            <div class='inner-container'>
+                <strong class='logo'><a href='/'><img height='100' width='300' src='/image/logomain.png' alt='DATABEAN' /><span class='subtext'><img src='/image/logowhite2.png' class='alternate' alt='' title='' /></span></a></strong>
+                <nav class='main_menu' data-selectname='Select a page'  role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement" >
+                    <div class="avia-menu av-main-nav-wrap av_menu_icon_beside">
+                        <ul id="avia-menu" class="menu av-main-nav">
+                            <li id="menu-item-333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
+                                <a href="/cooling.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">SmartBox</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                            </li>
+                            <li id="menu-item-315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-3">
+                                <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Datamon</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                            </li>
+                            <li id="menu-item-396" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-4">
+                                <a href="/question.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Support</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                            </li>
+                            <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-4">
+                                <a href="/about.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Company</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                            </li>
+                        </ul>
                     </div>
-                </div>
-                <div class='header_bg'></div>
-            </header>
+                    <ul class='noLightbox social_bookmarks icon_count_1'></ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class='header_bg'></div>
+</header>
