--- a/index.html
+++ b/index.html
@@ -118,37 +118,7 @@
     </head>
     <body id="top" class="home page-template-default page page-id-340 stretched quicksand open_sans " itemscope="itemscope" itemtype="https://schema.org/WebPage" >
         <div id='wrap_all'>
-            <header id='header' class='all_colors header_color light_bg_color  av_header_top av_logo_left av_main_nav_header av_menu_right av_slim av_header_sticky av_header_shrinking av_header_stretch_disabled av_mobile_menu_phone av_header_searchicon_disabled av_header_unstick_top_disabled av_minimal_header av_minimal_header_shadow av_bottom_nav_disabled  av_alternate_logo_active av_header_border_disabled'  role="banner" itemscope="itemscope" itemtype="https://schema.org/WPHeader" >
-                <a id="advanced_menu_toggle" href="#" aria-hidden='true' data-av_icon='' data-av_iconfont='entypo-fontello'></a>
-                <a id="advanced_menu_hide" href="#" 	aria-hidden='true' data-av_icon='' data-av_iconfont='entypo-fontello'></a>
-                <div  id='header_main' class='container_wrap container_wrap_logo'>
-                    <div class='container av-logo-container'>
-                        <div class='inner-container'>
-                            <strong class='logo'><a href='/'><img height='100' width='300' src='/image/logomain.png' alt='DATABEAN' /><span class='subtext'><img src='/image/logowhite2.png' class='alternate' alt='' title='' /></span></a></strong>
-                            <nav class='main_menu' data-selectname='Select a page'  role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement" >
-                                <div class="avia-menu av-main-nav-wrap av_menu_icon_beside">
-                                    <ul id="avia-menu" class="menu av-main-nav">
-                                        <li id="menu-item-333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
-                                            <a href="/cooling.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">SmartBox</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-3">
-                                            <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Datamon</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-396" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-4">
-                                            <a href="/question.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Support</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                        <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-4">
-                                            <a href="/about.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Company</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <ul class='noLightbox social_bookmarks icon_count_1'></ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-                <div class='header_bg'></div>
-            </header>
+            <header include-html="/header.html"></header>
             <!--메뉴 종료 / 본문 시작-->
             <div id='main' class='all_colors' data-scroll-offset='88'>
                 <div id='av_section_1' class='avia-section main_color avia-section-huge avia-no-border-styling avia-full-stretch av-section-color-overlay-active avia-bg-style-fixed  avia-builder-el-0  el_before_av_section  avia-builder-el-first  container_wrap fullsize' style = 'background-repeat: no-repeat; background-image: url(/image/server.jpg); background-attachment: fixed; background-position: top left; ' data-section-bg-repeat='stretch' >
@@ -504,7 +474,7 @@
                                                                 <img src="./image/article_smartbox.jpg" width="340px" style="margin:0px auto; text-align: center; display: block; border: 5px solid lightgrey;">
                                                             </div>
                                                             <div><br>
-                                                                <h4>데이터빈, 서버 냉각용 침지냉각 스마트박스 국내 첫 제작 보급</h4>
+                                                                <h4 style="letter-spacing: -1px;">데이터빈, 서버 냉각용 침지냉각 스마트박스 국내 첫 제작 보급</h4>
                                                                 <h6 style="text-align: center;">(신소재 경제 신문)</h6>
                                                             </div>
                                                         </a>
@@ -578,6 +548,9 @@
                                                     </div>
                                                     <div class="mp_logo">
                                                         <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/logo_kier.png" alt="" />
+                                                    </div>
+                                                    <div class="mp_logo">
+                                                        <img  itemprop="thumbnailUrl"  width="200" height="50" src="/image/venture_mark.png" alt="" />
                                                     </div>
                                                 </div>
                                             </section>
