mail form modifiy

--- a/question.html
+++ b/question.html
@@ -442,7 +442,7 @@
                                                     </select>
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth av-last-visible-form-element' id='element_avia_6_1'>
-                                                    <label for="avia_6_1" class="textare_label hidden textare_label_avia_6_1">문의내용 <abbr class="required" title="required">*</abbr></label>
+                                                    <label for="avia_6_1" class="textare_label textare_label_avia_6_1">문의내용 <abbr class="required" title="required">*</abbr></label>
                                                     <textarea  name="avia_6_1" class="text_area is_empty" cols="40" rows="7" id="avia_6_1" ></textarea>
                                                 </p>
                                                 <p class="hidden"><input type="text" name="avia_7_1" class="hidden " id="avia_7_1" value="" /></p>
