--- a/about.html
+++ b/about.html
@@ -442,7 +442,7 @@
                                                     </select>
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth' id='element_avia_5_1'>
-                                                    <label for="avia_5_1" class="textare_label hidden textare_label_avia_5_1">간단한 자기소개 <abbr class="required" title="required">*</abbr></label>
+                                                    <label for="avia_5_1" class="textare_label textare_label_avia_5_1">간단한 자기소개 <abbr class="required" title="required">*</abbr></label>
                                                     <textarea  name="자기소개" class="text_area is_empty" cols="40" rows="7" id="자기소개" ></textarea>
                                                 </p>
                                                 <p class=' first_form  form_element form_fullwidth av-last-visible-form-element' id='element_avia_6_1'>
