company brief - click to download

--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
                 <div class="textwidget">
                     <p>
                         <a href="/about.html">회사 소개</a><br />
-                        <a href="/data/Databean_CompanyBrief.pdf">회사소개서 다운  </a>
+                        <a href="/data/Databean_CompanyBrief.pdf" download>회사소개서 다운  </a>
                         <img src="https://cdn3.iconfinder.com/data/icons/document-icons-2/30/647710-pdf-16.png"><br />
                         <a href="/#partner">파트너</a><br/>
                         <a href="/about.html#career">채용문의</a>
