스파크랩 기사 update

--- a/index.html
+++ b/index.html
@@ -469,13 +469,14 @@
                                             <section class="av_textblock_section mp_content"  itemscope="itemscope" itemtype="https://schema.org/CreativeWork" >
                                                 <div class='avia_textblock  av_inherit_color mp_flexbox' style='color:black;' itemprop="text" >
                                                     <div style="width: 48%; float: left;">
-                                                        <a href="https://www.amenews.kr/news/view.php?idx=47554" style="text-decoration-line: none;">
+                                                        <!-- 뉴스 기사 링크 -->
+                                                        <a href="https://platum.kr/archives/189482" style="text-decoration-line: none;">
                                                             <div>
-                                                                <img src="./image/article_smartbox.jpg" width="340px" style="margin:0px auto; text-align: center; display: block; border: 5px solid lightgrey;">
+                                                                <img src="./image/spark_labs.jpg" width="400px" style="margin:10px auto; text-align: center; display: block; border: 5px solid lightgrey;">
                                                             </div>
                                                             <div><br>
-                                                                <h4 style="letter-spacing: -1px;">데이터빈, 서버 냉각용 침지냉각 스마트박스 국내 첫 제작 보급</h4>
-                                                                <h6 style="text-align: center;">(신소재 경제 신문)</h6>
+                                                                <h4 style="letter-spacing: -1px; text-align: center;">스파크랩, ESG 친환경 분야 데이터빈 투자 선정</h4>
+                                                                <!-- <h6 style="text-align: center;">(신소재 경제 신문)</h6> -->
                                                             </div>
                                                         </a>
                                                     </div>
