--- a/index.html
+++ b/index.html
@@ -470,13 +470,13 @@
                                                 <div class='avia_textblock  av_inherit_color mp_flexbox' style='color:black;' itemprop="text" >
                                                     <div style="width: 48%; float: left;">
                                                         <!-- 뉴스 기사 링크 -->
-                                                        <a href="https://platum.kr/archives/189482" style="text-decoration-line: none;">
+                                                        <a href="https://news.mt.co.kr/mtview.php?no=2022080116162495668" style="text-decoration-line: none;">
                                                             <div>
-                                                                <img src="./image/spark_labs.jpg" width="400px" style="margin:10px auto; text-align: center; display: block; border: 5px solid lightgrey;">
+                                                                <img src="./image/smartbox_title.png" width="400px" style="margin:10px auto; text-align: center; display: block; border: 5px solid lightgrey;">
                                                             </div>
                                                             <div><br>
-                                                                <h4 style="letter-spacing: -1px; text-align: center;">스파크랩, ESG 친환경 분야 데이터빈 투자 선정</h4>
-                                                                <!-- <h6 style="text-align: center;">(신소재 경제 신문)</h6> -->
+                                                                <h4 style="letter-spacing: -1px; text-align: center;">알리바바·MS가 택한 '침지냉각', 국내 첫 K마크 받은 스타트업</h4>
+                                                                <h6 style="text-align: center;">(머니 투데이)</h6>
                                                             </div>
                                                         </a>
                                                     </div>
